# ROBOTIS-OP3-Simulations

./: README.md
op3_gazebo_ros2/: CMakeLists.txt  package.xml
op3_gazebo_ros2/config/: bridge_parameters.yaml  robotis_op3_gazebo_config.yaml
op3_gazebo_ros2/gazebo/: robotis_op3.gazebo.xacro
op3_gazebo_ros2/launch/: robot_sim.launch.py
op3_webots_ros2/: CMakeLists.txt  package.xml
op3_webots_ros2/launch/: robot_launch.py
op3_webots_ros2/src/: extern_controller_main.cpp  op3_extern_controller.cpp
op3_webots_ros2/worlds/: .robotis_op3_extern.wbproj  robotis_op3_extern.wbt
rf_gz_bridge/: CMakeLists.txt  package.xml
rf_gz_bridge/config/: op3_joint_list.yaml
rf_gz_bridge/include/rf_gz_bridge/: rf_gz_bridge.hpp
rf_gz_bridge/src/: main.cpp  rf_gz_bridge.cpp
