<?xml version="1.0"?>
<package format="3">
  <name>op3_webots_ros2</name>
  <version>0.0.0</version>
  <description>
    A package for op3 webots simulation with ros2
  </description>
  <license>Apache-2.0</license>
  <author email="jay.hyunjong.song@nyu.edu">Jay</author>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="zerom@robotis.com">Zerom</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
